<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@mipmap/backgroundd">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4CFFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/header"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:paddingEnd="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/formstyle"
            android:hint="@string/your_email"
            android:lines="1"
            android:textSize="16sp"
            android:paddingStart="25dp"
            android:drawableEnd="@mipmap/email"
            android:maxLines="1"
            android:autofillHints="" />

        <EditText
            android:maxLines="1"
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:paddingEnd="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:background="@drawable/formstyle"
            android:hint="@string/your_password"
            android:paddingStart="25dp"
            android:drawableEnd="@mipmap/password"
            android:autofillHints="" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/sign_in"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/passwordForgot"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/facebook"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:text="@string/facebook"
                android:textSize="12sp"
                android:textColor="#fff"
                android:background="@drawable/facebook"/>

            <Button
                android:id="@+id/twitter"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:text="@string/twitter"
                android:textSize="12sp"
                android:textColor="#fff"
                android:background="@drawable/twitter"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:textSize="13sp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/account"/>

            <Button
                android:id="@+id/signUp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:textSize="13sp"
                android:text="@string/sign_up"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>